format source and cleanup